correction finale page contact contraste liens

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3090,7 +3090,7 @@ label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
-    font-weight: 700
+    color: #000;
 }
 
 input[type=search] {
